--- a/force-app/main/default/lwc/wb_MetadataRetrieve/wb_MetadataRetrieve.css
+++ b/force-app/main/default/lwc/wb_MetadataRetrieve/wb_MetadataRetrieve.css
@@ -7,9 +7,12 @@
     margin-top: 24px;
 }
 @media only screen and (max-width: 600px) {
-    .mobile_btn_pos {
+    .btn2_pos {
       margin-right: 4px;
       margin-top: 3px;
       display: inline-block;
+    }
+    .btn1_pos {
+        margin-left: 1rem;
     }
 }
